# IFJ15

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  check_main.c  circle.yml  code.c  exp.c  exp.h  expr.c  expr.h  expr_test.c  expression.c  expression.h  expression_test.c  find.c  globals.h  hash.c  hash.h  hash_test.c  hugo.h  ial.c  ial.h  ial_test.c  instruction.c  instruction.h  instruction_test.c  interpreter.c  interpreter.h  interpreter_test.c  klist.h  kvec.h  license.txt  list.c  list.h  main.c  mathi.h  (+16 more)
.build/: .gitignore  is_it_ok.sh
